# FastAPISample

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  makemigration.sh  pyproject.toml  run_debug_server.py  setup.cfg
db/: MIGRATIONS_HEAD  env.py
db/versions/: 20220628_184208_5663faa686de_add_fees.py  20220705_183017_72095ffc9bf6_fix_forced_happy_hours_time.py  20220712_142746_4527a75e1223_split_schedule_and_happy_hours.py  20220715_173655_046892de5db5_drop_forced_happy_hours_active_col.py  20220720_155130_410f3d5f170f_make_bonus_happy_hours_only.py  20220810_181216_9edc5dcd3196_rename_delivery_fee.py
logging_profiles/: debug.yaml  production.yaml
svc/: app.py  router.py  settings.py
svc/api/errors/: base.py  coupon.py  gift.py  handlers.py  user.py  warehouse.py
svc/api/handlers/: automation.py  bulk.py  conditions.py  coupon.py  gift.py
svc/api/models/: base_model.py  bulk.py  conditions.py  coupon.py  error_code.py  gifts.py  order.py
svc/events/: consumer.py  initiate.py  message_handlers.py  messages.py
svc/infrastructure/: logging.py  metrics.py  traces.py
svc/infrastructure/catalog/: catalog_manager.py  client.py  models.py  settings.py
svc/infrastructure/customer/: customer_profile_manager.py
svc/infrastructure/kafka/: consumer.py  kafka_instrumentation.py  message.py
svc/infrastructure/pricing/: models.py  pricing_adapter.py  pricing_manager.py
svc/infrastructure/warehouse/: models.py  warehouse_manager.py
svc/persist/: database.py
svc/persist/dao/: bonus.py  fee.py  happy_hours.py
svc/persist/schemas/: antifraud.py  bonus.py  coupon.py  fee.py  gift.py  happy_hours.py  metadata.py
svc/services/: cache.py  uow.py
svc/services/adapters/: warehouse_adapter.py
svc/services/antifraud/: antifraud_manager.py  dto.py
svc/services/bulk/: bulk_coupon_manager.py  bulk_coupon_service.py  dto.py
svc/services/conditions/: bar_manager.py  bonus_bar_manager.py  bonus_manager.py  conditions_collector.py  fee_bar_manager.py  (+4 more)
svc/utils/: discounting.py  module_loader.py  money.py
tests/: conftest.py  helpers.py  test_antifraud.py  test_bulk_update.py  test_conditions.py  test_consumer.py  test_coupon.py  test_distributed_discount.py  test_gift.py
tests/factories/: antifraud.py  base_factory.py  cart_banner.py  conditions_settings.py  coupon.py  coupon_orders_number.py  coupon_permit_category.py  coupon_permit_user.py  coupon_permit_warehouse.py  fee.py  gift_product.py  gift_promotion_setting.py  user_coupon.py
(+10 files in other folders)
